<resources>
    <string name="app_name">Quandoo Task</string>
    <string name="customers">Customers</string>
    <string name="tables">Tables</string>
    <string name="free">Free</string>
</resources>
